--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "prompt-control",
   "private": true,
   "version": "0.0.0",
+  "main": ".vite/build/main.js",
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,7 +35,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
-    "next": "^15.2.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
@@ -43,17 +44,23 @@
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-vite": "^7.4.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.21.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-onboarding": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
     "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/nextjs": "^8.6.12",
     "@storybook/test": "^8.6.14",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.1.10",
@@ -64,8 +71,9 @@
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.0.0",
+    "electron": "^30.0.8",
     "eslint": "^9.21.0",
-    "eslint-config-next": "^15.2.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^15.15.0",
@@ -73,13 +81,12 @@
     "jest-environment-jsdom": "^30.0.0",
     "playwright": "^1.52.0",
     "storybook": "^8.6.14",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^8.24.1",
+    "vite": "^5.4.9"
   },
-  "eslintConfig": {
-    "extends": [
-      "next/core-web-vitals",
-      "plugin:storybook/recommended"
-    ]
+  "config": {
+    "forge": "./forge.config.ts"
   }
 }
